<resources>
  <string name="app_name">under</string>
  <string name="title_activity_storage">StorageActivity</string>
  <string name="user_name">User Name:</string>
  <string name="age">Age</string>
  <string name="address">Address</string>
  <string name="gender">Gender</string>
  <string name="uuid">UUID</string>
  <string name="submit">Submit</string>
  <string name="name">Name</string>
  <string name="uuid_goes_here">UUID Goes Here</string>
  <string name="Foo">foo</string>
  <string name="title_activity_list_users">ListUsersActivity</string>
  <string name="add_user">Add User</string>
  <string name="wifi_module">wifi_module</string>
</resources>
