<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="ie.tcd.cs7cs3.storage.AddUserActivity">

  <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay">

  </com.google.android.material.appbar.AppBarLayout>
  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    app:popupTheme="@style/AppTheme.PopupOverlay" />

  <LinearLayout
    android:id="@+id/name_container"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_below="@id/toolbar">
    <TextView
      android:id="@+id/user_name_label"
      android:layout_width="120dp"
      android:layout_height="match_parent"
      android:text="@string/user_name" />
    <EditText
      android:id="@+id/edit_person_name"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:ems="10"
      android:hint="@string/name"
      android:inputType="textPersonName"
      android:text="@string/name" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/age_container"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_below="@id/name_container">
    <TextView
      android:id="@+id/user_age_label"
      android:layout_width="120dp"
      android:layout_height="match_parent"
      android:text="@string/age" />
    <EditText
      android:id="@+id/edit_age"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:ems="10"
      android:inputType="number" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/address_container"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_below="@id/age_container">
    <TextView
      android:id="@+id/user_address_label"
      android:layout_width="120dp"
      android:layout_height="match_parent"
      android:text="@string/address"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
    <EditText
      android:id="@+id/edit_address"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:ems="10"
      android:inputType="textPostalAddress" />
  </LinearLayout>


  <LinearLayout
    android:id="@+id/gender_container"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_below="@id/address_container">
    <TextView
      android:id="@+id/user_gender_label"
      android:layout_width="120dp"
      android:layout_height="match_parent"
      android:text="@string/gender"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
    <EditText
      android:id="@+id/edit_gender"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:ems="10"
      android:inputType="text|textAutoComplete" />
  </LinearLayout>


  <LinearLayout
    android:id="@+id/uuid_container"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_below="@id/gender_container">
    <TextView
      android:id="@+id/uuid_label"
      android:layout_width="120dp"
      android:layout_height="match_parent"
      android:text="@string/uuid"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
    <TextView
      android:id="@+id/uuid_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/uuid_goes_here" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/submit_container"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_below="@id/uuid_container">
    <Button
      android:id="@+id/submit_button"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/submit" />
  </LinearLayout>


  <!--  <include layout="@layout/content_storage" />-->

  <!--  <com.google.android.material.textfield.TextInputLayout-->
  <!--    android:layout_width="match_parent"-->
  <!--    android:layout_height="wrap_content">-->

  <!--  </com.google.android.material.textfield.TextInputLayout>-->
  <!--  <com.google.android.material.textfield.TextInputEditText-->
  <!--    android:layout_width="286dp"-->
  <!--    android:layout_height="wrap_content"-->
  <!--    android:hint="hint" />-->

</RelativeLayout>
